# dagprofiler

./: .gitignore  LICENSE  README.md  dagprofiler-specification.docx  pyproject.toml
.github/workflows/: publish.yml
dagprofiler/: __init__.py  config.py  dag.py  decorators.py  metrics.py  profile.py  schema.py  task.py
tests/: test_dag.py  test_profile.py  test_task.py
