[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dagprofiler"
version = "0.1.0"
description = "A standard for authoring profiler-compatible DAG tasks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "ANRGUSC", email = "bkrishna@usc.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ANRGUSC/dagprofiler"
Documentation = "https://github.com/ANRGUSC/dagprofiler#readme"
Repository = "https://github.com/ANRGUSC/dagprofiler"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
